assets/pagefind: Increase search input padding to avoid icon overflow

--- a/docs/assets/stylesheets/pagefind-header.css
+++ b/docs/assets/stylesheets/pagefind-header.css
@@ -45,7 +45,7 @@
   border: 1px solid var(--md-default-fg-color--lightest);
   background: var(--md-default-bg-color);
   color: var(--md-default-fg-color);
-  padding: 0 0.75rem;
+  padding: 0 1.75rem;
   font: inherit;
 }
 
